# website-cloner

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: .gitignore
frontend/src/app/: globals.css  page.module.css  page.tsx
